finished all the main goals?(tests not yet ran)

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -36,6 +36,10 @@
 
     <hr />
 
+
+
+    <div th:replace = "list-jobs :: displayJobTable"></div>
+
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
 </div>
