19 out of 20 tests passing? (think the last one is broken)

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -35,7 +35,7 @@
             <th th:text="${job.getPositionType}"></th>
         </tr>
         <tr>
-            <th>Skill</th>
+            <th>Core Competency</th>
             <th th:text="${job.getCoreCompetency}"></th>
         </tr>
 
